--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.8.3
 aiosignal==1.3.1
 altgraph==0.17.3
 anyio==3.6.2
+argcomplete==3.4.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
@@ -18,6 +19,7 @@ attrs==22.2.0
 auto-py-to-exe==2.27.0
 Babel==2.13.0
 backcall==0.2.0
+backoff==2.2.1
 basicsr==1.4.2
 beautifulsoup4==4.11.1
 bleach==6.0.0
@@ -33,8 +35,10 @@ click==8.1.3
 coincurve==18.0.0
 colorama==0.4.6
 comm==0.1.2
+composer==0.23.5
 comtypes==1.1.14
 contourpy==1.0.7
+coolname==2.2.0
 customtkinter==5.2.2
 cycler==0.11.0
 darkdetect==0.8.0
@@ -72,6 +76,8 @@ google-cloud-texttospeech==2.16.1
 google-pasta==0.2.0
 googleapis-common-protos==1.62.0
 googletrans==4.0.0rc1
+gql==3.5.0
+graphql-core==3.2.3
 greenlet==2.0.1
 grpcio==1.60.1
 grpcio-status==1.60.1
@@ -88,7 +94,7 @@ huggingface-hub==0.21.3
 hyperframe==5.2.0
 idna==2.10
 imageio==2.33.1
-importlib-metadata==7.0.1
+importlib-metadata==6.11.0
 ipykernel==6.20.2
 ipython==8.8.0
 ipython-genutils==0.2.0
@@ -119,6 +125,7 @@ kiwisolver==1.4.4
 lab==7.2
 lazy_loader==0.3
 libclang==16.0.6
+lightning-utilities==0.11.5
 lmdb==1.4.1
 Markdown==3.5.1
 markdown-it-py==3.0.0
@@ -128,6 +135,7 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.4
 ml-dtypes==0.2.0
+mosaicml-cli==0.6.38
 MouseInfo==0.1.3
 mpmath==1.3.0
 multidict==6.0.4
@@ -157,7 +165,7 @@ parso==0.8.3
 pefile==2022.5.30
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.4.0
+pillow==10.4.0
 platformdirs==3.11.0
 playsound==1.2.2
 plotly==5.22.0
@@ -168,6 +176,7 @@ protobuf==4.23.4
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py-cpuinfo==9.0.0
 py4j==0.10.9.7
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
@@ -185,7 +194,7 @@ PyMsgBox==1.0.9
 pynput==1.7.6
 pyparsing==3.0.9
 pyperclip==1.8.2
-pypiwin32==223; sys_platform == 'win32'
+pypiwin32==223
 PyRect==0.2.0
 pyrsistent==0.19.3
 PyScreeze==0.1.28
@@ -194,17 +203,19 @@ pyspark==3.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.4
+pytorch-ranger==0.1.1
 pyttsx3==2.90
 pytweening==1.0.4
 pytz==2023.3.post1
 pywhatkit==3.8
-pywin32==305; sys_platform == 'win32'
-pywin32-ctypes==0.2.2; sys_platform == 'win32'
-pywinpty==2.0.10; sys_platform == 'win32'
+pywin32==305
+pywin32-ctypes==0.2.2
+pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==25.0.0
 qtconsole==5.4.0
 QtPy==2.3.0
+questionary==2.0.1
 referencing==0.30.2
 regex==2023.12.25
 requests==2.31.0
@@ -215,6 +226,8 @@ rfc3986-validator==0.1.1
 rich==13.7.0
 rpds-py==0.10.6
 rsa==4.9
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
 safetensors==0.4.2
 scikit-image==0.22.0
 scikit-learn==1.3.2
@@ -235,25 +248,9 @@ statistics==1.0.3.5
 stats==0.1.2a0
 swig==4.1.1.post1
 sympy==1.12
+tabulate==0.9.0
 tb-nightly==2.16.0a20240107
 tenacity==8.4.2
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-#tensorflow==2.10.0  # Commented out TensorFlow since it's not required
-#tensorflow-estimator==2.10.0  # Commented out TensorFlow estimator
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.2.0
-terminado==0.17.1
-tf_keras-nightly==2.16.0.dev2024010710
-threadpoolctl==3.2.0
-tifffile==2023.12.9
-tinycss2==1.2.1
-tk==0.1.0
-tokenizers==0.15.2
-tomli==2.0.1
-torch==2.1.2+cu118
-torchaudio==2.1.2+cu118
-torchvision==0.16.2+cu118
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.8.1
@@ -266,6 +263,7 @@ tzdata==2023.3
 ufal.pybox2d==2.3.10.2
 uri-template==1.2.0
 urllib3==1.26.14
+validators==0.33.0
 vboxapi==1.0
 virtualenv==20.21.0
 waitress==2.1.2
@@ -274,11 +272,12 @@ webcolors==1.12
 webdriver-manager==3.8.6
 webencodings==0.5.1
 websocket-client==1.4.2
+websockets==11.0.3
 Werkzeug==2.2.2
 whichcraft==0.6.1
 widgetsnbextension==4.0.5
 wikipedia==1.4.0
-WMI==1.5.1; sys_platform == 'win32'
+WMI==1.5.1
 wrapt==1.14.1
 wsproto==1.2.0
 yapf==0.40.2
