--- a/requirements.txt
+++ b/requirements.txt
@@ -69,18 +69,14 @@ future==0.18.3
 gast==0.5.4
 gevent==22.10.2
 gevent-websocket==0.10.1
-google-api-core==2.17.1
 google-auth==2.26.1
 google-auth-oauthlib==1.2.0
-google-cloud-texttospeech==2.16.1
 google-pasta==0.2.0
-googleapis-common-protos==1.62.0
 googletrans==4.0.0rc1
 gql==3.5.0
 graphql-core==3.2.3
 greenlet==2.0.1
 grpcio==1.60.1
-grpcio-status==1.60.1
 gTTS==2.5.1
 gunicorn==21.2.0
 h11==0.9.0
@@ -135,11 +131,11 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.4
 ml-dtypes==0.2.0
-mosaicml-cli==0.6.38
+mosaicml-cli==0.6.38 ----
 MouseInfo==0.1.3
 mpmath==1.3.0
 multidict==6.0.4
-mysql-connector-python==8.0.32
+mysql-connector-python==8.0.32 ----
 namex==0.0.7
 nbclassic==0.4.8
 nbclient==0.7.2
