--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,13 @@ services:
     name: my-flask-app
     env: python
     buildCommand: |
+      apt-get update && apt-get install -y portaudio19-dev
       curl https://sh.rustup.rs -sSf | sh -s -- -y
       source $HOME/.cargo/env
       pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: flask run
-    pythonVersion: 3.10  # Ensure this is a version compatible with tensorflow-intel
+    pythonVersion: 3.10
     envVars:
       - key: CARGO_HOME
         value: /tmp/cargo
